@@ -1,5 +1,6 @@
-20211208/pbiering:
+20211212/pbiering:
 - HdFbTrueColorOsd.c: avoid printing invisible chars, as calculation of Width has issues
+- HdFbTrueColorOsd.c: replace broken rendering code by VDR internal Bitmap/DrawText:rendering
 
 20211208/pbiering: 3.3.2
 - HdFbTrueColorOsd.c: do not avoid printing of partial chars, as calculation of Width has issues
